Fixed spacing error for cards

--- a/src/Pokedex.css
+++ b/src/Pokedex.css
@@ -1,6 +1,7 @@
 .Pokedex-cards {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .Pokedex {
